// Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto2";
package hit.protobuf;

import "encoding_unit.proto";
import "ciphertext_vector.proto";
import "ckksparams.proto";

message EncryptedColVector {
	required int32 height = 1; // height of the matrix.
	required EncodingUnit unit = 2; // encoding unit.
	required CKKSParams ckks_params = 3; // CKKS parameters.
	required Ciphertext_Vector cts = 4; // cipher texts.
}
